test/parser/struct_instantiation_error.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct Color {
    r: int,
    g: int,
    b: int,
}

fn main() -> void {
    let err = Color {
        r: 0, 
        +,
        // CHECK: [[# @LINE -1 ]]:9: error: expected field initialization
        b: 2,
    };

    let x = 1;
}
// CHECK: StructDecl: Color
// CHECK-NEXT:   FieldDecl: r:int
// CHECK-NEXT:   FieldDecl: g:int
// CHECK-NEXT:   FieldDecl: b:int
// CHECK-NEXT: FunctionDecl: main -> void
// CHECK-NEXT:   Block
// CHECK-NEXT:     DeclStmt:
// CHECK-NEXT:       VarDecl: x
// CHECK-NEXT:         NumberLiteral: '1'
// CHECK-NOT: {{.*}}
